removed Focus outlines and fixed Announcement bar arrow sizing - was too small.

--- a/assets/base.css
+++ b/assets/base.css
@@ -683,18 +683,16 @@ summary::-webkit-details-marker {
 */
 
 *:focus-visible {
-  outline: 0.2rem solid rgba(var(--color-foreground), 0.5);
-  outline-offset: 0.3rem;
-  box-shadow: 0 0 0 0.3rem rgb(var(--color-background)),
-    0 0 0.5rem 0.4rem rgba(var(--color-foreground), 0.3);
+  outline: 0;
+  outline-offset: 0;
+  box-shadow: none;
 }
 
 /* Fallback - for browsers that don't support :focus-visible, a fallback is set for :focus */
 *:focus {
-  outline: 0.2rem solid rgba(var(--color-foreground), 0.5);
-  outline-offset: 0.3rem;
-  box-shadow: 0 0 0 0.3rem rgb(var(--color-background)),
-    0 0 0.5rem 0.4rem rgba(var(--color-foreground), 0.3);
+  outline: 0;
+  outline-offset: 0;
+  box-shadow: none;
 }
 
 /* Negate the fallback side-effect for browsers that support :focus-visible */
@@ -708,16 +706,16 @@ summary::-webkit-details-marker {
 */
 
 .focus-inset:focus-visible {
-  outline: 0.2rem solid rgba(var(--color-foreground), 0.5);
-  outline-offset: -0.2rem;
-  box-shadow: 0 0 0.2rem 0 rgba(var(--color-foreground), 0.3);
+  outline: 0;
+  outline-offset: 0;
+  box-shadow: none;
 }
 
 /* Fallback */
 .focus-inset:focus {
-  outline: 0.2rem solid rgba(var(--color-foreground), 0.5);
-  outline-offset: -0.2rem;
-  box-shadow: 0 0 0.2rem 0 rgba(var(--color-foreground), 0.3);
+  outline: 0;
+  outline-offset: 0;
+  box-shadow: none;
 }
 
 .focus-inset:focus:not(:focus-visible) {
@@ -1782,7 +1780,8 @@ input[type='checkbox'] {
 
 @media screen and (min-width: 750px) {
   .announcement-bar__link .icon-arrow {
-    height: 1.3rem;
+    /* height: 1.3rem; */
+    width:2rem;
   }
 }
 
